objects/DocGen_Callout_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndPoint_Contract__c</fullName>
        <label>EndPoint Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPDContract_Key__c</fullName>
        <label>SPDContract Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apiKey__c</fullName>
        <description>this field is to store the apikey for docgen</description>
        <label>apiKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocGen Callout Settings</label>
</CustomObject>